--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .row-header{
   margin:0px auto;
   padding:0px auto;
@@ -10,45 +11,137 @@
   min-height:400px;
 }
 
+.nav-link{
+  padding: 0px 0px 0px 0px;
+}
+
 .footer{
-  /* background-color: #D1C4E9; */
+  height:75px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.25em;
-  /* background-color: #FFE277; */
-  background-color: #FFCB74;
+  background-color: #000000;
+  margin:0px auto;
+  padding: 20px 0px 10px 0px;
+}
+
+.header{
+  position:fixed;
+  width: 100vw;
+  height:75px;
+  background-color: rgba(0,0,0,0.4);
   margin:0px auto;
   padding: 20px 0px 20px 0px;
+ 
 }
+
+.post-about{
+  background-color:rgba(105, 105, 105, 0.8);
+  border-color: #000000;
+}
+
+.card-shadow{
+   box-shadow: 10px 10px 5px rgb(51, 51, 51);
+}
+.card-contact{
+  width:250px; 
+  background-color:rgba(0,0,0,0.4);
+  
+}
+
+.card-horizontal {
+  position: initial;
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.media-about{
+  width:250px; 
+  
+}
+
+.btn-social-icon{
+  padding-right:75px;
+  padding-right:75px;
+}
+
+.card-contact:hover{
+  width:250px; 
+  background-color:rgba(56, 56, 56, 0.4);
+  
+}
+
+html{
+  background-color: black;
+}
+
+.home{
+  background-image: url("/assets/images/home_bulbs.jpg"); 
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 645px;
+  background-position:center;
+  padding: 10vw 20px 20px 10vw;
+  color: #ffffff;
+}
+
+.dashboard{
+  background-color: rgb(63, 63, 63);
+ 
+  padding: 100px 10px 20px 25px;
+  color: #000000;
+}
+
+.about-top{
+  background-image: url("/assets/images/about_trees.jpg"); 
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 350px;
+  background-position:bottom;
+  padding: 100px 200px 20px 200px;
+  color: #ffffff;
+}
+
+.about-bottom{
+  background-color: rgb(92, 92, 92);
+  padding: 20px 200px 20px 200px;
+  color: #ffffff;
+}
+
+.contact{
+  background-image: url("/assets/images/contact_laptop.jpg"); 
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 645px;
+  background-position:center;
+  padding: 100px 200px 20px 200px;
+  color: #ffffff;
+}
+
+.footer-links{
+  color: #ffffff;
+}
+
 .jumbotron {
   font-family: 'Times New Roman', Times, serif;
   font-size: 1.5em;
   text-align-last: center;
   padding:110px 10px 10px 10px;
   margin:0px auto;
-  /* margin-top: 20px; */
-  /* background: #58B4AE ; */
-  background: #07031A ;
+  background: #58B4AE ;
   color: floralwhite;
 }
+
 .carousel-indicators li {
   background-color: #0f0f0f;
 }
-.navbar-light{
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 1.3em;
-}
-
-
 
 address{
   font-size:80%;
   margin:0px;
   color:#0f0f0f;
-}
-
-
-.navbar-dark {    
-  background-color: #512DA8;    
 }
 
 .page-enter {
@@ -71,4 +164,30 @@ address{
   opacity: 0.01;
   transform: translateX(100%);
   transition: all 300ms ease-out;
+}
+
+.tab-topic{
+  border: none;
+  color:#ffffff;
+  border-radius:10px 10px 0px 0px;
+  height:50px;
+  font-size:125%;
+  padding:5px;
+  background-color:#000000
+}
+
+.tab-item{
+  background-color:#222222;
+  
+}
+
+.form-check{
+  padding: 10px 40px 10px 40px ;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.equip-choose{
+  padding:30px 45px 30px 45px;
+  border-radius: 10px 10px 0px 0px;
 }
