--- a/src/App.css
+++ b/src/App.css
@@ -167,18 +167,14 @@ address{
 }
 
 .tab-topic{
-  border: none;
-  color:#ffffff;
-  border-radius:10px 10px 0px 0px;
-  height:50px;
-  font-size:125%;
-  padding:5px;
-  background-color:#000000
+  
+  font-size:150%;
+ 
 }
 
 .tab-item{
-  background-color:#222222;
-  
+  /* background-color:#222222; */
+  background-color:#808080;
 }
 
 .form-check{
