--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,12 @@ address{
   color: #ffffff;
 }
 
+.button-bar{
+  padding: 10px 10px 10px 10px ;
+  background-color: #bdb6b6;
+  color: #ffffff;
+}
+
 .equip-choose{
   padding:30px 45px 30px 45px;
   border-radius: 10px 10px 0px 0px;
